--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
 body {
     background: #1a202c;
 }
+
+section {
+    border: 1px solid tomato;
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
