--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,23 @@ body {
 }
 
 section {
-    border: 1px solid tomato;
     width: 80%;
     margin: 20px auto;
     padding: 20px;
     box-sizing: border-box;
+}
+
+section h1 {
+    font-family: Poppins;
+    color: #ef3b2d;
+}
+
+
+section .message-area textarea {
+    position: relative;
+    background: #2d3748;
+    width: 100%;
+    border-radius: 15px;
+    border: #323b4a;
+    resize: none;
 }
