--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,4 +22,12 @@ section .message-area textarea {
     border-radius: 15px;
     border: #323b4a;
     resize: none;
+    overflow: auto;
+    outline: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    padding: 20px;
+    color: #fff;
+    font-family: Poppins;
 }
