--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 section {
-    width: 80%;
+    width: 90%;
     margin: 20px auto;
     padding: 20px;
     box-sizing: border-box;
@@ -30,4 +30,31 @@ section .message-area textarea {
     padding: 20px;
     color: #fff;
     font-family: Poppins;
+    margin-bottom: 20px;
+}
+
+section .message-area input {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    cursor: pointer;
+    color: #fff;
+    background-color: #138496;
+    border-color: #117a8b;
 }
