--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 section {
-    width: 90%;
+    width: 100%;
     margin: 20px auto;
     padding: 20px;
     box-sizing: border-box;
@@ -31,6 +31,7 @@ section .message-area textarea {
     color: #fff;
     font-family: Poppins;
     margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 section .message-area input {
