--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,13 @@ body {
     background: #1a202c;
 }
 
+img {
+    display: block;
+    max-width: 80%;
+    border-radius: 10px 10px 0 0;
+    margin: 0px auto;
+}
+
 section {
     width: 100%;
     margin: 20px auto;
@@ -10,21 +17,23 @@ section {
     max-width: 960px;
 }
 
-section.thanks {
-    width: 500px;
-    margin: 50px auto;
-    font-family: Poppins;
-    color: #fff;
-}
 
 section.thanks a {
     color: aqua;
+}
+
+section.thanks .message-area p {
+    color: #49647f;
+    text-align: center;
+    margin-top: 2px;
+    text-align: center;
 }
 
 section h1 {
     font-family: Poppins;
     color: #fff;
     margin-bottom: 0px;
+    text-align: center;
 }
 
 section h3 {
@@ -36,8 +45,24 @@ section h3 {
 }
 
 section .message-area {
+    position: relative;
     background: #fff;
     border-radius: 10px 10px 0 0;
+    width: 100%;
+    border: #323b4a;
+    
+}
+section.thanks .message-area {
+    margin-top: 20px;
+    border-radius: 10px;
+    font-family: Poppins;
+    padding-bottom: 1px;
+}
+
+section.thanks h2 {
+    color: #314961;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
 section .message-area p {
@@ -45,11 +70,8 @@ section .message-area p {
 }
 
 section .message-area textarea {
-    position: relative;
     background: transparent;
     width: 100%;
-    border-radius: 15px;
-    border: #323b4a;
     resize: none;
     overflow: auto;
     outline: none;
@@ -62,7 +84,8 @@ section .message-area textarea {
     box-sizing: border-box;
 }
 
-section .message-area input {
+section .message-area input,
+section.thanks .message-area a {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -86,4 +109,13 @@ section .message-area input {
     width: 100%;
     border-top: 1px solid #e4e4e4;
     background-color: #4abdfe;
+}
+
+section.thanks .message-area a {
+    width: 100px;
+    margin: 10px auto;
+    text-decoration: none;
+    display: block;
+    border-radius: 10px;
+    padding: .6rem .75rem;
 }
