--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@ section .message-area textarea {
     color: #2d3748;
     font-family: Poppins;
     box-sizing: border-box;
+    border: none;
 }
 
 section .message-area input,
@@ -118,4 +119,14 @@ section.thanks .message-area a {
     display: block;
     border-radius: 10px;
     padding: .6rem .75rem;
+}
+
+.rants .message {
+    border: 1px solid #fff;
+    padding: 10px;
+    background: #fff;
+    border-radius: 5px;
+    font-family: Poppins;
+    margin-bottom: 20px;
+    font-size: 13px;
 }
