--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,10 +47,10 @@ section h3 {
 section .message-area {
     position: relative;
     background: #fff;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
     width: 100%;
     border: #323b4a;
-    
+    padding-bottom: 1px;
 }
 section.thanks .message-area {
     margin-top: 20px;
@@ -110,6 +110,16 @@ section.thanks .message-area a {
     width: 100%;
     border-top: 1px solid #e4e4e4;
     background-color: #4abdfe;
+}
+
+section .message-area input {
+    width: 200px;
+    display: block;
+    margin: 0px auto;
+    margin-bottom: 0px;
+    padding: 10px 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 section.thanks .message-area a {
